dCamTorumMiner 1.2